--- a/app.css
+++ b/app.css
@@ -80,16 +80,38 @@ button:active {
 
 .fa-twitter {
     font-size: 1.5rem;
-}
 
-/* Media Query: Tablet or smaller */
-@media screen and (max-width:1000px) {
-    .quote-container {
-        margin: auto 10px;
-
+    /* }
+Loader */
+    .loader {
+        border: 16px solid #f3f3f3;
+        /* Light grey */
+        border-top: 16px solid #333;
+        /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
     }
 
-    .quote-text {
-        font-size: 2.5rem;
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
     }
-}
+
+    /* Media Query: Tablet or smaller */
+    @media screen and (max-width:1000px) {
+        .quote-container {
+            margin: auto 10px;
+
+        }
+
+        .quote-text {
+            font-size: 2.5rem;
+        }
+    }
